--- a/Handling sequences.ipynb
+++ b/Handling sequences.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -254,6 +254,37 @@
     "s1=Seq(\"ACGT\")\n",
     "s2=Seq(\"ACGT\")\n",
     "print s1==s2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sequences are much like strings and so you can index them much like strings. For example, `s1[3]` is the fourth character. Now head over to Ville and try to figure out the Hamming distance exercise. Here's a little loop to get you started:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "C\n",
+      "G\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1=Seq(\"ACGTACGT\")\n",
+    "\n",
+    "for i in range(3):\n",
+    "    print s1[i]"
    ]
   },
   {
@@ -289,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -328,14 +359,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The translation is driven by a genetic code table, of which there are [many](http://biopython.org/DIST/docs/api/Bio.Data.CodonTable-module.html). You can specify the table either by its name or by its number (check out the file linked in the module documentation).\n",
-    "\n",
-    "Now head over to VILLE and solve the which table exercise. Here's a little hint:"
+    "The translation is driven by a genetic code table, of which there are [many](http://biopython.org/DIST/docs/api/Bio.Data.CodonTable-module.html). You can specify the table either by its name or by its number (check out the file linked in the module documentation). The tables are accessible via the various dictionaries in the CodonTable module:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -344,36 +373,159 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n"
+      "By name: {'Ascidian Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2fbd0>, 'SGC9': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f450>, 'Coelenterate Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 'Protozoan Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 'Vertebrate Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe3d0>, 'Plant Plastid': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f6d0>, 'Thraustochytrium Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3db10>, 'Blepharisma Macronuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d110>, 'Mold Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 'Invertebrate Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbebd0>, 'Standard': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe0d0>, 'Trematode Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d610>, 'Scenedesmus obliquus Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d890>, 'Euplotid Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f450>, 'Yeast Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe650>, 'Spiroplasma': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 'Alternative Flatworm Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2fe50>, 'Ciliate Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbee90>, 'SGC8': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f1d0>, 'Alternative Yeast Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f950>, 'Hexamita Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbee90>, 'SGC5': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbee90>, 'SGC4': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbebd0>, 'SGC3': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 'SGC2': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe650>, 'SGC1': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe3d0>, 'SGC0': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe0d0>, 'Flatworm Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f1d0>, 'Dasycladacean Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbee90>, 'Chlorophycean Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d390>, 'Mycoplasma': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 'Pterobranchia Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3dd90>, 'Bacterial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f6d0>, 'Echinoderm Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f1d0>}\n",
+      "By ID: {1: <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe0d0>, 2: <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe3d0>, 3: <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe650>, 4: <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 5: <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbebd0>, 6: <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbee90>, 9: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f1d0>, 10: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f450>, 11: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f6d0>, 12: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f950>, 13: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2fbd0>, 14: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2fe50>, 15: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d110>, 16: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d390>, 21: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d610>, 22: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d890>, 23: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3db10>, 24: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3dd90>}\n"
      ]
     }
    ],
    "source": [
-    "for i in xrange(1,25):\n",
-    "    print i"
+    "import Bio.Data.CodonTable as CT\n",
+    "\n",
+    "print \"By name:\", CT.generic_by_name\n",
+    "print \"By ID:\", CT.generic_by_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That is not too readable. Let's try this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All names: ['Ascidian Mitochondrial', 'SGC9', 'Coelenterate Mitochondrial', 'Protozoan Mitochondrial', 'Vertebrate Mitochondrial', 'Plant Plastid', 'Thraustochytrium Mitochondrial', 'Blepharisma Macronuclear', 'Mold Mitochondrial', 'Invertebrate Mitochondrial', 'Standard', 'Trematode Mitochondrial', 'Scenedesmus obliquus Mitochondrial', 'Euplotid Nuclear', 'Yeast Mitochondrial', 'Spiroplasma', 'Alternative Flatworm Mitochondrial', 'Ciliate Nuclear', 'SGC8', 'Alternative Yeast Nuclear', 'Hexamita Nuclear', 'SGC5', 'SGC4', 'SGC3', 'SGC2', 'SGC1', 'SGC0', 'Flatworm Mitochondrial', 'Dasycladacean Nuclear', 'Chlorophycean Mitochondrial', 'Mycoplasma', 'Pterobranchia Mitochondrial', 'Bacterial', 'Echinoderm Mitochondrial']\n",
+      "Help on NCBICodonTable in module Bio.Data.CodonTable object:\n",
+      "\n",
+      "class NCBICodonTable(CodonTable)\n",
+      " |  Method resolution order:\n",
+      " |      NCBICodonTable\n",
+      " |      CodonTable\n",
+      " |      __builtin__.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, id, names, table, start_codons, stop_codons)\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  nucleotide_alphabet = NucleotideAlphabet()\n",
+      " |  \n",
+      " |  protein_alphabet = IUPACProtein()\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from CodonTable:\n",
+      " |  \n",
+      " |  __str__(self)\n",
+      " |      Returns a simple text representation of the codon table.\n",
+      " |      \n",
+      " |      e.g.\n",
+      " |      \n",
+      " |      >>> import Bio.Data.CodonTable\n",
+      " |      >>> print(Bio.Data.CodonTable.standard_dna_table)\n",
+      " |      >>> print(Bio.Data.CodonTable.generic_by_id[1])\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from CodonTable:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes inherited from CodonTable:\n",
+      " |  \n",
+      " |  back_table = {}\n",
+      " |  \n",
+      " |  forward_table = {}\n",
+      " |  \n",
+      " |  start_codons = []\n",
+      " |  \n",
+      " |  stop_codons = []\n",
+      "\n",
+      "Start codons of the SGC9 table: ['ATG', 'AUG']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"All names:\", CT.generic_by_name.keys()\n",
+    "#Sometimes the help() method tells you something about the object you're dealing with\n",
+    "help(CT.generic_by_name[\"SGC9\"])\n",
+    "print \"Start codons of the SGC9 table:\",CT.generic_by_name[\"SGC9\"].start_codons"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that you know you can list all available tables using `Bio.Data.CodonTable.generic_by_name.keys()` you can also loop over these tables and solve the next exercise in Ville. Here's yet a little for loop to get you started."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ascidian Mitochondrial\n",
+      "SGC9\n",
+      "Coelenterate Mitochondrial\n",
+      "Protozoan Mitochondrial\n",
+      "Vertebrate Mitochondrial\n",
+      "Plant Plastid\n",
+      "Thraustochytrium Mitochondrial\n",
+      "Blepharisma Macronuclear\n",
+      "Mold Mitochondrial\n",
+      "Invertebrate Mitochondrial\n",
+      "Standard\n",
+      "Trematode Mitochondrial\n",
+      "Scenedesmus obliquus Mitochondrial\n",
+      "Euplotid Nuclear\n",
+      "Yeast Mitochondrial\n",
+      "Spiroplasma\n",
+      "Alternative Flatworm Mitochondrial\n",
+      "Ciliate Nuclear\n",
+      "SGC8\n",
+      "Alternative Yeast Nuclear\n",
+      "Hexamita Nuclear\n",
+      "SGC5\n",
+      "SGC4\n",
+      "SGC3\n",
+      "SGC2\n",
+      "SGC1\n",
+      "SGC0\n",
+      "Flatworm Mitochondrial\n",
+      "Dasycladacean Nuclear\n",
+      "Chlorophycean Mitochondrial\n",
+      "Mycoplasma\n",
+      "Pterobranchia Mitochondrial\n",
+      "Bacterial\n",
+      "Echinoderm Mitochondrial\n"
+     ]
+    }
+   ],
+   "source": [
+    "import Bio.Data.CodonTable\n",
+    "\n",
+    "for table_name in Bio.Data.CodonTable.generic_by_name.keys():\n",
+    "    print table_name"
    ]
   },
   {
@@ -385,9 +537,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -404,13 +557,14 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-2acbe05d2c34>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mmrna\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcomplement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mprint\u001b[0m \u001b[0mtranslated\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcomplement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-16-9557b8233c7a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmrna\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mSeq\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"AUGGCCAUUGUAAUGGGCCGCUGAAAGGGUGCCCGAUAG\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIUPAC\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munambiguous_rna\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mmrna\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcomplement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mprint\u001b[0m \u001b[0mtranslated\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcomplement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/Bio/Seq.pyc\u001b[0m in \u001b[0;36mcomplement\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    760\u001b[0m         \u001b[0mbase\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mAlphabet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_base_alphabet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0malphabet\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    761\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbase\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mAlphabet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mProteinAlphabet\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 762\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Proteins do not have complements!\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    763\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbase\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mAlphabet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDNAAlphabet\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    764\u001b[0m             \u001b[0mttable\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_dna_complement_table\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mValueError\u001b[0m: Proteins do not have complements!"
      ]
     }
    ],
    "source": [
+    "mrna=Seq(\"AUGGCCAUUGUAAUGGGCCGCUGAAAGGGUGCCCGAUAG\", IUPAC.unambiguous_rna)\n",
     "print mrna.complement()\n",
     "print translated.complement()"
    ]
