--- a/Handling sequences.ipynb
+++ b/Handling sequences.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -61,12 +61,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ACGCGGCGTG\n",
       "ACGCGGCGTG\n"
      ]
     }
    ],
    "source": [
-    "print s"
+    "print s\n",
+    "print \"ACGCGGCGTG\""
    ]
   },
   {
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -96,6 +98,7 @@
    "source": [
     "print repr(s)\n",
     "print s.__class__ #two underscores not one\n",
+    "#help(s)\n",
     "print s.alphabet"
    ]
   },
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -158,6 +161,7 @@
     }
    ],
    "source": [
+    "s=Seq(\"ACGCGGCGTG\")\n",
     "print s.translate()"
    ]
   },
@@ -181,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -216,12 +220,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.666666666667\n"
+      "0.666666666667\n",
+      "0.0\n",
+      "0.0\n"
      ]
     }
    ],
    "source": [
-    "print float(2)/3"
+    "print float(2)/3\n",
+    "print float(2/3) #this doesn't do what you think\n",
+    "print 2/3/1.5 #neither does this"
    ]
   },
   {
@@ -237,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -265,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -285,6 +293,37 @@
     "\n",
     "for i in range(3):\n",
     "    print s1[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A A\n",
+      "C C\n",
+      "G G\n",
+      "T A\n",
+      "A C\n",
+      "C G\n",
+      "G T\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1=Seq(\"ACGTACG\")\n",
+    "s2=Seq(\"ACGACGT\")\n",
+    "\n",
+    "assert len(s1)==len(s2), (len(s1),len(s2))\n",
+    "for c1,c2 in zip(s1,s2):\n",
+    "    print c1,c2\n",
+    "    \n"
    ]
   },
   {
@@ -373,8 +412,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "By name: {'Ascidian Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2fbd0>, 'SGC9': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f450>, 'Coelenterate Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 'Protozoan Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 'Vertebrate Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe3d0>, 'Plant Plastid': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f6d0>, 'Thraustochytrium Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3db10>, 'Blepharisma Macronuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d110>, 'Mold Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 'Invertebrate Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbebd0>, 'Standard': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe0d0>, 'Trematode Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d610>, 'Scenedesmus obliquus Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d890>, 'Euplotid Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f450>, 'Yeast Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe650>, 'Spiroplasma': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 'Alternative Flatworm Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2fe50>, 'Ciliate Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbee90>, 'SGC8': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f1d0>, 'Alternative Yeast Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f950>, 'Hexamita Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbee90>, 'SGC5': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbee90>, 'SGC4': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbebd0>, 'SGC3': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 'SGC2': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe650>, 'SGC1': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe3d0>, 'SGC0': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe0d0>, 'Flatworm Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f1d0>, 'Dasycladacean Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbee90>, 'Chlorophycean Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d390>, 'Mycoplasma': <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 'Pterobranchia Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3dd90>, 'Bacterial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f6d0>, 'Echinoderm Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f1d0>}\n",
-      "By ID: {1: <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe0d0>, 2: <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe3d0>, 3: <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe650>, 4: <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbe950>, 5: <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbebd0>, 6: <Bio.Data.CodonTable.NCBICodonTable object at 0x2bbee90>, 9: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f1d0>, 10: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f450>, 11: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f6d0>, 12: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2f950>, 13: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2fbd0>, 14: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c2fe50>, 15: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d110>, 16: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d390>, 21: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d610>, 22: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3d890>, 23: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3db10>, 24: <Bio.Data.CodonTable.NCBICodonTable object at 0x2c3dd90>}\n"
+      "By name: {'Ascidian Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3504b50>, 'SGC9': <Bio.Data.CodonTable.NCBICodonTable object at 0x35043d0>, 'Coelenterate Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493950>, 'Protozoan Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493950>, 'Vertebrate Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x34933d0>, 'Plant Plastid': <Bio.Data.CodonTable.NCBICodonTable object at 0x3504650>, 'Thraustochytrium Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3512a90>, 'Blepharisma Macronuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x3512090>, 'Mold Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493950>, 'Invertebrate Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493bd0>, 'Standard': <Bio.Data.CodonTable.NCBICodonTable object at 0x34930d0>, 'Trematode Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3512590>, 'Scenedesmus obliquus Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3512810>, 'Euplotid Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x35043d0>, 'Yeast Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493650>, 'Spiroplasma': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493950>, 'Alternative Flatworm Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3504dd0>, 'Ciliate Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493e10>, 'SGC8': <Bio.Data.CodonTable.NCBICodonTable object at 0x3504150>, 'Alternative Yeast Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x35048d0>, 'Hexamita Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493e10>, 'SGC5': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493e10>, 'SGC4': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493bd0>, 'SGC3': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493950>, 'SGC2': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493650>, 'SGC1': <Bio.Data.CodonTable.NCBICodonTable object at 0x34933d0>, 'SGC0': <Bio.Data.CodonTable.NCBICodonTable object at 0x34930d0>, 'Flatworm Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3504150>, 'Dasycladacean Nuclear': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493e10>, 'Chlorophycean Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3512310>, 'Mycoplasma': <Bio.Data.CodonTable.NCBICodonTable object at 0x3493950>, 'Pterobranchia Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3512d10>, 'Bacterial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3504650>, 'Echinoderm Mitochondrial': <Bio.Data.CodonTable.NCBICodonTable object at 0x3504150>}\n",
+      "By ID: {1: <Bio.Data.CodonTable.NCBICodonTable object at 0x34930d0>, 2: <Bio.Data.CodonTable.NCBICodonTable object at 0x34933d0>, 3: <Bio.Data.CodonTable.NCBICodonTable object at 0x3493650>, 4: <Bio.Data.CodonTable.NCBICodonTable object at 0x3493950>, 5: <Bio.Data.CodonTable.NCBICodonTable object at 0x3493bd0>, 6: <Bio.Data.CodonTable.NCBICodonTable object at 0x3493e10>, 9: <Bio.Data.CodonTable.NCBICodonTable object at 0x3504150>, 10: <Bio.Data.CodonTable.NCBICodonTable object at 0x35043d0>, 11: <Bio.Data.CodonTable.NCBICodonTable object at 0x3504650>, 12: <Bio.Data.CodonTable.NCBICodonTable object at 0x35048d0>, 13: <Bio.Data.CodonTable.NCBICodonTable object at 0x3504b50>, 14: <Bio.Data.CodonTable.NCBICodonTable object at 0x3504dd0>, 15: <Bio.Data.CodonTable.NCBICodonTable object at 0x3512090>, 16: <Bio.Data.CodonTable.NCBICodonTable object at 0x3512310>, 21: <Bio.Data.CodonTable.NCBICodonTable object at 0x3512590>, 22: <Bio.Data.CodonTable.NCBICodonTable object at 0x3512810>, 23: <Bio.Data.CodonTable.NCBICodonTable object at 0x3512a90>, 24: <Bio.Data.CodonTable.NCBICodonTable object at 0x3512d10>}\n"
      ]
     }
    ],
@@ -575,18 +614,6 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.5+"
   }
  },
  "nbformat": 4,
