--- a/UniProt.ipynb
+++ b/UniProt.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "q={\"query\":\"name:p53 AND reviewed:yes AND organism:\\\"Homo sapiens (Human) [9606]\\\"\"}\n",
+    "q={\"query\":'name:p53 AND reviewed:yes AND organism:\"Homo sapiens (Human) [9606]\"'}\n",
     "r=requests.get(\"http://www.uniprot.org/uniprot\",params=q)\n",
     "print \"r=\",r\n",
     "print \"r.url=\", r.url\n",
