--- a/UniProt.ipynb
+++ b/UniProt.ipynb
@@ -285,6 +285,15 @@
     "\n",
     "#Now make a list of URec named tuples out of the table (Ville exercise)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ID mapping\n",
+    "\n",
+    "UniProt offers an online service for ID mapping. [See here](http://www.uniprot.org/help/programmatic_access#id_mapping_examples)"
+   ]
   }
  ],
  "metadata": {
