--- a/Protein Sorting online service.ipynb
+++ b/Protein Sorting online service.ipynb
@@ -100,7 +100,7 @@
     "\n",
     "Forms are submitted using requests.post with the argument `data`. Let's try.\n",
     "\n",
-    "[EDIT: There was a bug in the code below. It used to say SEQSUB but it should say SEQPASTE. Thanks to Ning Wang for figuring it out!]"
+    "<span style=\"color:red\">[EDIT: There was a bug in the code below. It used to say SEQSUB but it should say SEQPASTE. Thanks to Ning Wang for figuring it out!]</span>"
    ]
   },
   {
