move exercise 3.5 to 1.5

--- a/question/1. Sequences.ipynb
+++ b/question/1. Sequences.ipynb
@@ -146,6 +146,36 @@
     "# produced s_ref from s                                                         \n",
     "                                                                         "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise 1.5 Remove ambiguous alphabet letter\n",
+    "\n",
+    "Define a function clean(s) where s is a string and the function returns s with all characters removed which are not A, C, G, or T.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACGTHABJHHBAGATGATB None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def clean(s):\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    \n",
+    "print(\"ACGTHABJHHBAGATGATB\", clean(\"ACGTHABJHHBAGATGATB\"))\n"
+   ]
   }
  ],
  "metadata": {
