--- a/week-1-sequences.ipynb
+++ b/week-1-sequences.ipynb
@@ -18,7 +18,16 @@
     "\n",
     "## Summary\n",
     "\n",
-    "Sequence-related objects and functions are in the [`Bio.Seq`](https://biopython.org/DIST/docs/api/Bio.Seq.Seq-class.html) module."
+    "Biological sequences are modelled by the `Seq` class in the [`Bio.Seq`](https://biopython.org/DIST/docs/api/Bio.Seq-module.html) module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Bio.Seq as BS"
    ]
   },
   {
@@ -29,7 +38,16 @@
     "\n",
     "Alphabet objects specify how the sequence of letters should be interpreted. There are generic alphabets for DNA, RNA, and proteins but also IUPAC-compatible alphabets. In addition to the normal \"unambiguous\" alphabets, IUPAC defines \"ambiguous\" and \"extended\" alphabets.\n",
     "\n",
-    "See [`Alphabet API`](https://biopython.org/DIST/docs/api/Bio.Alphabet-module.html) for details."
+    "See the [`Bio.Alphabet`](https://biopython.org/DIST/docs/api/Bio.Alphabet-module.html) module for details."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Bio.Alphabet as BA"
    ]
   },
   {
@@ -47,43 +65,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Bio.Alphabet as BA\n",
-    "import Bio.Seq as BS\n",
-    "\n",
     "# Python string\n",
     "seq = \"AAAA\"\n",
     "print(seq)\n",
-    "print(repr(seq))\n",
-    "print()\n",
-    "\n",
+    "print(repr(seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# DNA sequence\n",
     "seq = BS.Seq(\"AAAA\", BA.generic_dna)\n",
     "print(seq)\n",
-    "print(seq.alphabet)\n",
-    "print(repr(seq))\n",
-    "print()\n",
-    "\n",
+    "print(repr(seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# RNA sequence\n",
     "seq = BS.Seq(\"AAAA\", BA.generic_rna)\n",
     "print(seq)\n",
-    "print(seq.alphabet)\n",
-    "print(repr(seq))\n",
-    "print()\n",
-    "\n",
+    "print(repr(seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# protein sequence\n",
     "seq = BS.Seq(\"AAAA\", BA.generic_protein)\n",
     "print(seq)\n",
-    "print(seq.alphabet)\n",
-    "print(repr(seq))\n",
-    "print()\n",
-    "\n",
+    "print(repr(seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# protein sequence\n",
     "seq = BS.Seq(\"AAAA\", BA.generic_protein)\n",
-    "# another Python string\n",
+    "# back to Python string\n",
     "seq = str(seq)\n",
     "print(seq)\n",
-    "print(repr(seq))\n",
-    "print()"
+    "print(repr(seq))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The alphabet can also be accessed if needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# protein sequence\n",
+    "seq = BS.Seq(\"AAAA\", BA.generic_protein)\n",
+    "print(seq.alphabet)"
    ]
   },
   {
@@ -99,35 +152,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Bio.Alphabet as BA\n",
-    "import Bio.Seq as BS\n",
-    "\n",
     "# DNA sequence\n",
-    "seq = BS.Seq(\"ACGCGGCGTG\", BA.generic_dna)\n",
-    "\n",
+    "seq = BS.Seq(\"ACGCGGCGTG\", BA.generic_dna)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# length of sequence\n",
-    "print(len(seq))\n",
-    "print()\n",
-    "\n",
+    "print(len(seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# access to a single element\n",
-    "print(seq[4])\n",
-    "print()\n",
-    "\n",
+    "print(seq[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# slicing\n",
-    "print(seq[2:5])\n",
-    "print()\n",
-    "\n",
+    "print(seq[2:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# iteration\n",
     "for e in seq:\n",
-    "    print(e)\n",
-    "print()"
+    "    print(e)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Study the [`Bio.Seq.Seq API`](https://biopython.org/DIST/docs/api/Bio.Seq.Seq-class.html) to learn what methods it has. Some of them will be discussed below."
+    "Study the [`Seq`](https://biopython.org/DIST/docs/api/Bio.Seq.Seq-class.html) class API to learn what methods it has. Some of them will be discussed below."
    ]
   },
   {
@@ -145,25 +219,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Bio.Alphabet as BA\n",
-    "import Bio.Seq as BS\n",
-    "\n",
     "# DNA sequences\n",
     "seq1 = BS.Seq(\"ACGCGGCGTG\", BA.generic_dna)\n",
     "seq2 = BS.Seq(\"AAAGGGTAAA\", BA.generic_dna)\n",
     "\n",
     "seq = seq1+seq2\n",
-    "print(seq)\n",
-    "print(repr(seq))\n",
-    "print()\n",
-    "\n",
+    "print(repr(seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# DNA sequences\n",
     "seq1 = BS.Seq(\"ACGCGGCGTG\", BA.generic_dna)\n",
     "seq2 = BS.Seq(\"AAAGGGTAAA\", BA.generic_protein)\n",
     "\n",
     "# incompatible sequences cannot be concatenated\n",
     "try:\n",
-    "    print(seq1+seq2)\n",
+    "    seq = seq1+seq2\n",
+    "    print(repr(seq))\n",
     "except TypeError as e:\n",
     "    print(e)"
    ]
@@ -183,21 +260,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Bio.Alphabet as BA\n",
-    "import Bio.Seq as BS\n",
-    "\n",
     "# sequence with IUPAC alphabet\n",
     "seq1 = BS.Seq(\"ACGCGGCGTG\", BA.IUPAC.unambiguous_dna)\n",
-    "print(seq1)\n",
-    "print(repr(seq1))\n",
-    "print()\n",
-    "\n",
+    "print(repr(seq1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# lower-case version has a generic alphabet\n",
     "seq2 = seq1.lower()\n",
-    "print(seq2)\n",
-    "print(repr(seq2))\n",
-    "print()\n",
-    "\n",
+    "print(repr(seq2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# an upper-case substring is not found in the lower-case version\n",
     "print(\"ACGC\" in seq1)\n",
     "print(\"ACGC\" in seq2)"
@@ -218,14 +302,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# turn warnings into exceptions\n",
-    "import warnings as W\n",
-    "W.simplefilter(\"error\")\n",
-    "\n",
-    "import Bio as B\n",
-    "import Bio.Alphabet as BA\n",
-    "import Bio.Seq as BS\n",
-    "\n",
     "# DNA sequences\n",
     "seq1 = BS.Seq(\"ACGCGGCGTG\", BA.IUPAC.unambiguous_dna)\n",
     "seq2 = BS.Seq(\"ACGCGGCGTG\", BA.IUPAC.ambiguous_dna)\n",
@@ -233,14 +309,41 @@
     "seq4 = BS.Seq(\"NNNCGGCGTG\", BA.IUPAC.ambiguous_dna)\n",
     "\n",
     "# protein sequence\n",
-    "seq5 = BS.Seq(\"ACGCGGCGTG\", BA.IUPAC.protein)\n",
-    "\n",
+    "seq5 = BS.Seq(\"ACGCGGCGTG\", BA.IUPAC.protein)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# compatible alphabets have no problems\n",
-    "print(seq1 == seq2)\n",
-    "\n",
+    "print(seq1 == seq2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ambiguous nucleotides are compared as such (i.e. no \"intelligent\" matching)\n",
     "print(seq2 == seq4)\n",
-    "print(seq3 == seq4)\n",
+    "print(seq3 == seq4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# turn warnings into exceptions\n",
+    "import warnings as W\n",
+    "W.simplefilter(\"error\")\n",
+    "\n",
+    "import Bio as B\n",
     "\n",
     "# incompatible alphabets are compared but with warning\n",
     "try:\n",
@@ -266,38 +369,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Bio.Alphabet as BA\n",
-    "import Bio.Seq as BS\n",
-    "\n",
     "# DNA sequence\n",
     "seq1 = BS.Seq(\"ACGCGGCGTGAA\", BA.IUPAC.unambiguous_dna)\n",
-    "print(seq1)\n",
-    "print(repr(seq1))\n",
-    "print()\n",
-    "\n",
-    "# complement and reverse complement sequences\n",
+    "print(repr(seq1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# complement\n",
     "seq = seq1.complement()\n",
-    "print(seq)\n",
+    "print(repr(seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reverse complement\n",
     "seq = seq1.reverse_complement()\n",
-    "print(seq)\n",
-    "print(repr(seq))\n",
-    "print()\n",
-    "\n",
+    "print(repr(seq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# transcribed sequence\n",
     "seq2 = seq1.transcribe()\n",
-    "print(seq2)\n",
-    "print(repr(seq2))\n",
-    "print()\n",
-    "\n",
+    "print(repr(seq2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# translated sequence\n",
     "seq3 = seq2.translate()\n",
-    "print(seq3)\n",
-    "\n",
+    "print(repr(seq3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# DNA can be translated directly, too\n",
     "seq3 = seq1.translate()\n",
-    "print(seq3)\n",
-    "print(repr(seq3))\n",
-    "print()"
+    "print(repr(seq3))"
    ]
   },
   {
@@ -318,8 +447,6 @@
     "W.simplefilter(\"error\")\n",
     "\n",
     "import Bio as B\n",
-    "import Bio.Alphabet as BA\n",
-    "import Bio.Seq as BS\n",
     "\n",
     "# DNA sequence\n",
     "seq = BS.Seq(\"ACGCGGCGTGA\", BA.IUPAC.unambiguous_dna)\n",
@@ -342,29 +469,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Bio.Alphabet as BA\n",
-    "import Bio.Seq as BS\n",
-    "\n",
     "# DNA sequence with two stop codons\n",
     "seq = BS.Seq(\"ACGAGGGCGTAGGTGCCTCGATAG\", BA.IUPAC.unambiguous_dna)\n",
     "seq = seq.translate()\n",
-    "print(seq)\n",
-    "print(repr(seq))\n",
-    "print()\n",
-    "\n",
-    "# translate until the first stop codon\n",
-    "seq = BS.Seq(\"ACGAGGGCGTAGGTGCCTCGATAG\", BA.IUPAC.unambiguous_dna)\n",
-    "seq = seq.translate(to_stop=True)\n",
-    "print(seq)\n",
-    "print(repr(seq))\n",
-    "print()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The translation method can be given a specific codon table. Biopython uses the codon information provided by NCBI. See [`CodonTable API`](https://biopython.org/DIST/docs/api/Bio.Data.CodonTable-module.html) for details."
+    "print(repr(seq))"
    ]
   },
   {
@@ -373,23 +481,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Bio.Alphabet as BA\n",
-    "import Bio.Seq as BS\n",
-    "\n",
+    "# translate until the first stop codon\n",
+    "seq = BS.Seq(\"ACGAGGGCGTAGGTGCCTCGATAG\", BA.IUPAC.unambiguous_dna)\n",
+    "seq = seq.translate(to_stop=True)\n",
+    "print(repr(seq))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The translation method can be given a specific codon table. Biopython uses the codon information provided by NCBI. See the [`Bio.Data.CodonTable`](https://biopython.org/DIST/docs/api/Bio.Data.CodonTable-module.html) module for details."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Bio.Data.CodonTable as BDCT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# DNA sequence\n",
-    "seq1 = BS.Seq(\"ACGAGGGCGTAGGTGCCTCGATAG\", BA.IUPAC.unambiguous_dna)\n",
-    "\n",
+    "seq1 = BS.Seq(\"ACGAGGGCGTAGGTGCCTCGATAG\", BA.IUPAC.unambiguous_dna)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# translation using the default codon table\n",
     "seq2 = seq1.translate(table=\"Standard\")\n",
-    "print(seq2)\n",
-    "print(repr(seq2))\n",
-    "print()\n",
-    "\n",
+    "print(repr(seq2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# translation using a mitochondrial codon table\n",
     "seq2 = seq1.translate(table=\"Vertebrate Mitochondrial\")\n",
-    "print(seq2)\n",
-    "print(repr(seq2))\n",
-    "print()\n"
+    "print(repr(seq2))"
    ]
   },
   {
@@ -405,23 +548,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import Bio.Data.CodonTable as BDCT\n",
-    "\n",
     "# iterate over table names\n",
     "for name in BDCT.generic_by_name.keys():\n",
-    "    print(name)\n",
-    "print()\n",
-    "\n",
+    "    print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# access a specific table\n",
     "table = BDCT.generic_by_name[\"Vertebrate Mitochondrial\"]\n",
-    "print(table)\n",
-    "print()\n",
-    "\n",
-    "# start and stop codons\n",
-    "print(table.start_codons)\n",
-    "print()\n",
-    "print(table.stop_codons)\n",
-    "print()"
+    "print(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# start codons\n",
+    "print(table.start_codons)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stop codons\n",
+    "print(table.stop_codons)"
    ]
   }
  ],
