--- a/week-1-sequences.ipynb
+++ b/week-1-sequences.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sequence objects\n",
+    "# Biological sequences\n",
     "\n",
     "## Instructions\n",
     "\n",
