fixed a bug minor improvements

--- a/week-3-uniprot.ipynb
+++ b/week-3-uniprot.ipynb
@@ -22,9 +22,7 @@
     "\n",
     "[UniProt](https://www.uniprot.org/) is a resource of protein sequences and their annotations. Biopython does not support the online access to UniProt but can parse the XML format used by UniProt. Fortunately, UniProt has a simple API to search and fetch data.\n",
     "\n",
-    "The [`requests`](http://requests.readthedocs.org/en/latest/) module is a simple-to-use module for HTTP-based communication. With this module, the UniProt API can be used in a similar manner as EUtils can be used via Biopython, which makes the approaches used in the previous part of the course relevant. The `requests` module will also be used to communicate with other online services.\n",
-    "\n",
-    "The `requests` module is not automatically installed. If you are using Anaconda, you can install it by running the command `conda install -c anaconda requests` in the Anaconda prompt (Windows) or in the terminal (Linux, MacOS)."
+    "The [`requests`](http://requests.readthedocs.org/en/latest/) module is a simple-to-use module for HTTP-based communication. With this module, the UniProt API can be used in a similar manner as EUtils can be used via Biopython, which makes the approaches used in the previous part of the course relevant. The `requests` module will also be used to communicate with other online services."
    ]
   },
   {
@@ -505,6 +503,10 @@
     "# (since the service accepts FASTA format, we can use the file content as such)\n",
     "with open('sequences.fasta') as f:\n",
     "    seqs = f.read()\n",
+    "\n",
+    "# it seems that the SignalP service expects Windows newlines\n",
+    "# (i.e. replace \\n with \\r\\n)\n",
+    "seqs = seqs.replace('\\n', '\\r\\n')\n",
     "\n",
     "# service address\n",
     "url = 'http://www.cbs.dtu.dk/cgi-bin/webface2.fcgi'\n",
